# irtk

./: .buildinfo  .gitignore  LICENSE  README.md  api.html  environment.yml  genindex.html  index.html  install.html  objects.inv  py-modindex.html  pyproject.toml  search.html  searchindex.js  setup.py
_sources/: api.md.txt
connectors/: __init__.py  index.html  mitsuba.html  nvdiffrast.html  psdr-enzyme.html  psdr-jit.html  psdr_enzyme_connector.py  pytorch3d.html  redner.html
docs/: README.md  conf.py  core_install.rst  core_intro.rst  forward_intro.rst  index.rst  inverse_intro.rst  requirements.txt
examples/: copy_nb.py  custom_models.py  opt.py  quick_start.html  quick_start.ipynb  render_target.py  simple_inverse_rendering_example.html  simple_inverse_rendering_example.ipynb
irt/: __init__.py  io.py  parameter.py  scene.py  utils.py
irtk/: __init__.py  config.py  connector.py  cubicL.txt  io.py  loss.py  metric.py  model.py  parameter.py  renderer.py  sampling.py  scene.py  transform.py  utils.py
irtk_stubs/: irtk.config.html  irtk.connector.Connector.html  irtk.connector.get_connector.html  irtk.connector.get_connector_list.html  irtk.connector.html  irtk.connector.is_connector_available.html  irtk.connectors.html  irtk.connectors.mitsuba_connector.MitsubaConnector.html  irtk.connectors.mitsuba_connector.MitsubaMicrofacetBSDF.html  irtk.connectors.mitsuba_connector.convert_color.html  irtk.connectors.mitsuba_connector.gen_add_param.html  irtk.connectors.mitsuba_connector.html  irtk.connectors.mitsuba_connector.process_diffuse_brdf.html  irtk.connectors.mitsuba_connector.process_environment_light.html  irtk.connectors.mitsuba_connector.process_hdr_film.html  (+157 more)
(+376 files in other folders)
