[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "ivt"
authors = [{name = "Guangyan Cai", email = "gcai3@uci.edu"}]
readme = "README.md"
dynamic = ["version", "description"]
dependencies = [
    'python_version >= 3.8',
    'pytorch >= 1.11.0',
    'imageio >= 2.27.0',
    'numpy',
    'gin-config',
    'trimesh'
]

[project.urls]
Home = "https://github.com/uci-rendering/inv-render-toolkit"
